# QA_Intelli_Media_Comparator

./: .env.critical  .env.example  .env.high  .env.low  .env.medium  .gitignore  Makefile  README.md  Technical_Document.md  pyproject.toml
frontend/: index.html
qa_intelli_media_comparator/: __init__.py  config.py  main.py
qa_intelli_media_comparator/api/: app.py  dependencies.py  middleware.py
qa_intelli_media_comparator/api/routes/: __init__.py  analyze.py  compare.py  health.py  reports.py
qa_intelli_media_comparator/models/: __init__.py  artifacts.py  enums.py  media.py  metadata.py  metrics.py  report.py  video.py
qa_intelli_media_comparator/services/: __init__.py  annotation_renderer.py  artifact_detector.py  camera_mode_detector.py  functionality_checker.py  media_type_detector.py  no_reference_analyzer.py  pipeline.py  preview_cropper.py  quality_metrics.py  reference_comparator.py  video_analyzer.py
qa_intelli_media_comparator/storage/: report_store.py  schema.sql
tests/: conftest.py  test_api.py  test_artifact_detector.py  test_media_type_detector.py  test_pipeline.py  test_preview_cropper.py  test_quality_metrics.py  test_reference_comparator.py  test_video_analyzer.py
